--- a/src/templates/id-card/id-card.ejs
+++ b/src/templates/id-card/id-card.ejs
@@ -132,7 +132,7 @@
     <div class="id-card-container">
         <div class="id-card">
             <div class="logo">
-                <img src="http://192.168.1.16:3000/assets/images/Logo_GMF_Aero_Asia.png" alt="GMF AeroAsia">
+                <img src="<%= gmfLogoUrl %>" alt="GMF AeroAsia">
             </div>
             <hr>
             <div class="id-card-front">
@@ -158,7 +158,7 @@
         </div>
         <div class="id-card">
             <div class="logo">
-                <img src="http://192.168.1.16:3000/assets/images/Logo_GMF_Aero_Asia.png" alt="GMF AeroAsia">
+                <img src="<%= gmfLogoUrl %>" alt="GMF AeroAsia">
             </div>
             <hr>
             <div class="id-card-back">
