--- a/src/templates/id-card/id-card.ejs
+++ b/src/templates/id-card/id-card.ejs
@@ -126,6 +126,12 @@
             display: block;
             font-size: 16px;
         }
+
+        @media (max-width: 768px) {
+            .id-card-container {
+                flex-direction: column;
+            }
+        }
     </style>
 </head>
 <body>
